--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-/* ------fonts----- */
-\@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+/* ------fonts styles----- */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 body{
     font-family: 'Poppins', sans-serif;
 }
@@ -22,10 +22,16 @@ body{
 }
 .link-button{ 
     background-color: #E02C6D;
+    color: white;
+    text-decoration: none;
     padding-left: 24px;
     padding-top: 10px;
-    padding-right: 56px;
+    padding-right: 46px;
     padding-bottom: 10px;
+}
+i{
+    color: white;
+    margin-left: 8px;
 }
 .banner-img{
     margin-top: 153px;
@@ -47,8 +53,6 @@ body{
 }
 .player{
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-    /* width: 330px;
-    height: 474px; */
     width: 300px;
     height: 426px;
     padding-left: 15px;
@@ -67,7 +71,51 @@ body{
     margin-bottom: 10px;
 }
 p{ 
+    font-weight: normal;
     font-size: 16px;
-    margin: 0%;  
-    /* margin-bottom: 15px;   */
+    margin: 0%;  }
+.highlights-container{
+    display: flex;
+    justify-content: space-between;
+    row-gap: 69px;
+    margin-right: 153px;
+    margin-left: 182px;
+    
+}
+.highlights-title{
+    margin-top: 224px;
+    width: 469px;
+height: 120px;
+font-size: 48px;
+}
+.highlights-img{
+    margin-top: 167px;
+    margin-bottom: 156px;
+    
+}
+.high-info{
+    width: 404px;
+    height: 113px;
+}
+.extra-container{
+    text-align: center;
+    margin-bottom: 50px;
+}
+#extra-logo{
+    display: flex;
+    justify-content: center;
+    column-gap: 15px;
+}
+/* ----footer styles--- */
+footer{
+    text-align: center;
+    margin-bottom: 63px;
+} 
+ #foot-icons{
+    display: flex;
+    justify-content: center;
+    column-gap: 14px;
+} 
+.far{
+    color: black;
 }
